# youtube-shorts-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  Plan.md  RADME.md  README.md  main.py  pyproject.toml  registry.py  settings.py
.claude/: settings.json
.claude/rules/: code-style.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
src/: cust_types.py
src/agents/: prompts.py  simple_react_agent.py
src/agents/prebuilt/: simple_react_agent.py
src/agents/youtube_shorts_agent/: agent_state.py  config.py  prompt.py  utils.py  workflow.py
src/utils/: cust_types.py  logging.py  models.py
